Development Portal (2016-06-15 shi)
==============================
Replace site footer with new layout, info and links
Added translations for new footer
Contact email changed site-wide to queries@d-portal.org


Development Portal (2016-06-14 shi)
==============================
Fixed table CSS for Print-friendly
Fixed portal name vertical align with flag (min)
Search layout redesign


Development Portal (2016-05-31 shi)
==============================
Change layout of Search button
Updated text on search button
Add translations for search button


Development Portal (2016-01-30 shi)
==============================
Added portal link on individual Dash profiles


Development Portal (2016-01-29 shi)
==============================
Fixed all tables layout for better hover states
Added border lines to Print Friendly tables
Fixed Activity State section in Dash
Minor text edit in Dash 


Development Portal (2016-01-28 shi)
==============================
Added new data quality alert for no active projects
Translations added for alert
Added footnote info for Donors table about CRS agencies
Added translations for footnote info
Fixed double tab Generator bug for Firefox
Fixed layout bug for SAVi option in Generator
Edited link for news post


Development Portal (2015-11-13 shi)
==============================
Include baseline year comments in SAVi results
Fixed Print Friendly description border


Development Portal (2015-11-12 shi)
==============================
Added Result subheader to SAVi
Update CSS for themes and rgba
Plural for Results, Budgets and Transactions
Fixed hover CSS org budget column for rgba


Development Portal (2015-11-10 shi)
==============================
SAVi results CSS to include new attributes
Include result types, description, target, actual, periods
Update Print Friendly CSS
Update rgba themes CSS with new attributes
Fixed related document list CSS


Development Portal (2015-11-05 shi)
==============================