@@ -433,8 +433,6 @@ a.data_invest:hover		{color:#FFF; background-color:rgba(194,0,255,0.8);}
 	============================================= */
 .footer_wrap			{display:table-footer-group; height:1px; background-color:rgba(0,14,32,0.9);}
 .footer					{width:960px; margin:0 auto; padding:10px 0;}
-.footer_motto			{font-size:22px;}
-.footer_motto span		{color:#53B4ED; font-weight:bold;}
 .footer_link			{display:inline-block; vertical-align:top; width:620px; color:#FFF; padding:60px 50px 0 0; box-sizing:border-box; font-size:18px; line-height:1.5em;}
 .footer_link.list		{width:340px; padding:60px 0 30px 0;}
 .footer_link a			{font-size:1.0em; line-height:1.5em; color:#999;}
@@ -448,6 +446,13 @@ a.data_invest:hover		{color:#FFF; background-color:rgba(194,0,255,0.8);}
 .footer_link ul			{padding-bottom:20px;}
 .footer_link p			{padding:15px 0;}
 .footer_link p.beta		{font-style:italic; color:#ccc;}
+.footer_motto			{font-size:22px; line-height:27px;}
+.footer_motto a			{color:#53B4ED; font-weight:bold; line-height:27px;}
+.footer_motto a:focus	{color:#53B4ED;}
+.footer_motto a:link  	{color:#53B4ED;}
+.footer_motto a:visited	{color:#53B4ED;}
+.footer_motto a:hover	{color:#8ACBF2;}
+.footer_motto a:active	{color:#53B4ED;}
 .footer_header			{font-size:20px; color:#FFF; border-bottom:1px solid #A0988B; padding-bottom:5px; margin-bottom:10px;}
 
 
