@@ -60,7 +60,7 @@
 
 #large_footer
 <div class="footer_link">
-	<div class="footer_motto"><span>{footer6_text}</span> {footer7_text}</div>
+	<div class="footer_motto"><a href="http://d-portal.org/">{footer6_text}</a> {footer7_text}</div>
 	<p>{footer8_text}</p>
 	<p class="beta">{footer9_text}</p>
 	<p>{footer10_text} <b><a href="mailto:queries@d-portal.org">{footer11_text}</a></b></p>
