@@ -1,3 +1,8 @@
+Static site (2016-06-16 shi)
+==============================
+Changed motto to link in footer
+
+
 Static site (2016-06-15 shi)
 ==============================
 Replaced footer with new layout on index
