@@ -1,3 +1,8 @@
+Development Portal (2016-06-16 shi)
+==============================
+Changed motto to link in footer
+
+
 Development Portal (2016-06-15 shi)
 ==============================
 Replace site footer with new layout, info and links
